crates/toml_edit/tests/snapshots/invalid/integer/positive-hex.stderr
TOML parse error at line 1, column 16
  |
1 | positive-hex = +0xff
  |                ^
integers with a radix cannot be signed, expected nothing
